// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostMain - Snapshots > matches snapshot with isReply false 1`] = `
<div
  data-class-name="relative flex cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="flex-1 rounded-md py-0 gap-0"
    data-testid="card"
  >
    <div
      data-post-id="post-no-reply-456"
      data-testid="repost-bar"
    >
      RepostBar 
      post-no-reply-456
      <button
        data-testid="undo-repost-button"
      >
        Undo repost
      </button>
    </div>
    <div
      data-post-id="post-no-reply-456"
      data-testid="post-preview-card"
    >
      <div
        data-testid="post-preview-card-header"
      >
        PostHeader 
        post-no-reply-456
      </div>
      <div
        data-testid="post-preview-card-content"
      >
        PostContent 
        post-no-reply-456
      </div>
      <div
        data-class-name="justify-between gap-2 md:flex-row md:gap-0"
        data-testid="container"
      >
        <div
          data-testid="post-tags-list"
        >
          PostTagsList 
          post-no-reply-456
        </div>
        <div
          data-class-name="w-full flex-1 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-no-reply-456
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with isReply true 1`] = `
<div
  data-class-name="relative flex cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="w-3 shrink-0"
    data-override-defaults="true"
    data-testid="container"
  >
    <div
      data-height="150"
      data-testid="thread-connector"
      data-variant="regular"
    >
      ThreadConnector
    </div>
  </div>
  <div
    data-class-name="flex-1 rounded-md py-0 gap-0"
    data-testid="card"
  >
    <div
      data-post-id="post-reply-123"
      data-testid="repost-bar"
    >
      RepostBar 
      post-reply-123
      <button
        data-testid="undo-repost-button"
      >
        Undo repost
      </button>
    </div>
    <div
      data-post-id="post-reply-123"
      data-testid="post-preview-card"
    >
      <div
        data-testid="post-preview-card-header"
      >
        PostHeader 
        post-reply-123
      </div>
      <div
        data-testid="post-preview-card-content"
      >
        PostContent 
        post-reply-123
      </div>
      <div
        data-class-name="justify-between gap-2 md:flex-row md:gap-0"
        data-testid="container"
      >
        <div
          data-testid="post-tags-list"
        >
          PostTagsList 
          post-reply-123
        </div>
        <div
          data-class-name="w-full flex-1 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-reply-123
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot with tags 1`] = `
<div
  data-class-name="relative flex cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="flex-1 rounded-md py-0 gap-0"
    data-testid="card"
  >
    <div
      data-post-id="post-123"
      data-testid="repost-bar"
    >
      RepostBar 
      post-123
      <button
        data-testid="undo-repost-button"
      >
        Undo repost
      </button>
    </div>
    <div
      data-post-id="post-123"
      data-testid="post-preview-card"
    >
      <div
        data-testid="post-preview-card-header"
      >
        PostHeader 
        post-123
      </div>
      <div
        data-testid="post-preview-card-content"
      >
        PostContent 
        post-123
      </div>
      <div
        data-class-name="justify-between gap-2 md:flex-row md:gap-0"
        data-testid="container"
      >
        <div
          data-testid="post-tags-list"
        >
          PostTagsList 
          post-123
        </div>
        <div
          data-class-name="w-full flex-1 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-123
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PostMain - Snapshots > matches snapshot without tags 1`] = `
<div
  data-class-name="relative flex cursor-pointer"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-class-name="flex-1 rounded-md py-0 gap-0"
    data-testid="card"
  >
    <div
      data-post-id="post-789"
      data-testid="repost-bar"
    >
      RepostBar 
      post-789
      <button
        data-testid="undo-repost-button"
      >
        Undo repost
      </button>
    </div>
    <div
      data-post-id="post-789"
      data-testid="post-preview-card"
    >
      <div
        data-testid="post-preview-card-header"
      >
        PostHeader 
        post-789
      </div>
      <div
        data-testid="post-preview-card-content"
      >
        PostContent 
        post-789
      </div>
      <div
        data-class-name="justify-between gap-2 md:flex-row md:gap-0"
        data-testid="container"
      >
        <div
          data-testid="post-tags-list"
        >
          PostTagsList 
          post-789
        </div>
        <div
          data-class-name="w-full flex-1 justify-start md:justify-end"
          data-testid="post-actions"
        >
          Actions 
          post-789
          <button>
            Reply
          </button>
          <button>
            Repost
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
